# kav-poss

./: .env.example  .gitignore  Cargo.toml  README.md
core-server/: Cargo.toml
core-server/src/: lib.rs
doc/builders/: builders.md
dockerfiles/postgres/: Dockerfile
migration/: Cargo.toml
migration/src/: lib.rs  m20250903_200616_create_products_table.rs  m20250904_211710_create_users_table.rs  m20250904_212116_create_roles_table.rs  m20250904_212334_create_user_roles_pivot_table.rs  m20250909_005702_inser_roles_tables.rs  m20250909_005702_insert_roles_tables.rs  m20260123_222500_create_companies.rs  m20260123_222500_create_companies_table.rs  m20260125_002042_create_plans_table.rs  m20260125_005629_create_plan_features_pivot_table.rs  m20260209_133913_create_company_roles_table.rs  m20260209_133932_create_company_colaborators_table.rs  m20260210_135747_create_company_roles_pivot.rs  m20260210_231905_colaborator_roles_pivot.rs
scripts/: generate_seaorm_entity.ps1
src/: main.rs  routers.rs
src/application/: mod.rs
src/application/commands/: mod.rs  product_handler.rs  user_handler.rs
src/application/exceptions/: mod.rs
src/application/queries/: .rautomod  company_query.rs  mod.rs  plan_query.rs  product_query.rs  user_query.rs
src/application/usecases/: company_usecases.rs  mod.rs  plan_usecases.rs  product_usecases.rs  user_usecases.rs
src/domain/: mod.rs
src/domain/builders/: company_builder.rs  mod.rs  plan_builder.rs  role_builder.rs  user_builder.rs
src/domain/entities/: .rautomod  company.rs  company_colaborator.rs  company_role.rs  mod.rs  plan.rs  product.rs  role.rs  user.rs
src/domain/entities/product/: product.rs
src/domain/exceptions/: mod.rs
src/domain/repositories/: colaborator_repository_interface.rs  company_repository.rs  company_repository_interface.rs  company_role_repository_interface.rs  mod.rs  plan_repository_interface.rs  product_repository_interface.rs  role_repository_interface.rs  user_repository_interface.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/entities/: colaborator_role_pivot.rs  company.rs  company_colaborator.rs  company_role.rs  company_role_pivot.rs  mod.rs  plan.rs  plan_feature_pivot.rs  prelude.rs  product.rs  role.rs  user.rs  user_roles_pivot.rs
src/infrastructure/http/: mod.rs
src/infrastructure/http/middlewares/: mod.rs  (+2 more)
src/infrastructure/mappers/: company_colaborator_mapper.rs  company_mapper.rs  company_role_mapper.rs  mod.rs  plan_mapper.rs  product_mapper.rs  role_mapper.rs  user_mapper.rs
src/infrastructure/persistence/: mod.rs  sea_orm_colaborator_repository.rs  sea_orm_company_repository.rs  sea_orm_company_role_repository.rs  sea_orm_plan_repository.rs  sea_orm_product_repository.rs  sea_orm_role_repository.rs  sea_orm_user_repository.rs
src/infrastructure/services/: cookie_service.rs  jwt_auth_service.rs  mod.rs
(+39 files in other folders)
