[package]
name = "kavserver"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "core-server", "migration"]

[dependencies]
migration = { path = "migration" }
core-server = { path = "core-server" }
async-trait = "0.1.89"
regex = "1.11.3"
salvo = { version = "0.84.0", features = ["affix-state", "flash", "jwt-auth", "logging"] }
sea-orm = { version = "1.1.16", features = ["macros", "sqlx-postgres"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.17"
rust_decimal = "1.38.0"
crypto = { version = "0.5.1", features = ["password-hash"] }
argon2 = "0.5.3"
time = "0.3.43"
jsonwebtoken = { version = "9.3.1" }
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0.145"
