[package]
name = "kavserver"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "core-server", "migration"]

[dependencies]
migration = { path = "migration" }
core-server = { path = "core-server" }
async-trait = "0.1.89"
regex = "1.12.2"
salvo = { version = "0.88.1", features = ["affix-state", "flash", "jwt-auth", "logging"] }
sea-orm = { version = "1.1.19", features = ["macros", "sqlx-postgres"] }
tokio = { version = "1.49.0", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.18"
rust_decimal = "1.40.0"
crypto = { version = "0.5.1", features = ["password-hash"] }
argon2 = "0.5.3"
time = "0.3.45"
jsonwebtoken = { version = "10.2.0" }
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0.149"
garde = { version = "0.22.1", features = ["credit-card", "serde", "phone-number", "email", "full"] }
